<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


 <item
      android:id="@+id/ajouter"
      android:orderInCategory="1"
      android:title="@string/item1"


     />

    <item
        android:id="@+id/enregistrer"
        android:orderInCategory="2"
        android:title="@string/item2"


        />

    <item
        android:id="@+id/lister"
        android:orderInCategory="3"
        android:title="@string/item3"


        />


    <item
        android:id="@+id/rechercher"
        android:orderInCategory="4"
        android:title="@string/item4"


        />

    <item
        android:id="@+id/listePSexe"
        android:orderInCategory="5"
        android:title="@string/item5"


        />


    <item
        android:id="@+id/listeffct"
        android:orderInCategory="6"
        android:title="@string/item6"


        />





</menu>