<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="#ED7F10"
android:layout_marginRight="20dp">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_orange_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nomMembref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:textColor="#FFFFFF"
        android:text="@string/Nom" />


    <TextView
        android:id="@+id/prenomMembref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/Prenom" />


    <TextView
        android:id="@+id/typeTravailMembref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/typeTravail" />

    <TextView
        android:id="@+id/commentMembref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/commentaire" />




</LinearLayout>

</LinearLayout>